# cronosMatic

./: .env.example  .gitignore  CLAUDE.md  Justfile  Makefile  README.md  compose.override.yml  docker-compose.yml  setup.sh
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init_pgvector_and_items.py  0df93307bef0_create_products_table.py  45de82c06a3a_create_categories_table.py  59c4d107ad1c_create_orders_tables.py  5cb7fe90c432_add_carts_and_cart_items_tables.py  8d61de12b0fb_rebuild_categories_table.py  9c03329ad7c8_add_addresses_table.py  a1b2c3d4e5f6_add_timestamps_and_soft_delete_to_categories.py  b2c3d4e5f6g7_replace_slug_unique_with_partial_index.py  d5546fb533b2_create_users_and_refresh_tokens_tables.py
backend/app/: config.py  crud.py  main.py  models.py
backend/app/api/: deps.py  main.py
backend/app/core/: config.py
backend/migrations/: env.py
backend/scripts/: seed_categories.py  test.sh
backend/tests/: conftest.py  test_address_router.py  test_auth_router.py  test_auth_service.py  test_cart_router.py  test_categories_repository.py  test_categories_router.py  test_categories_service.py  test_domain_category.py  test_domain_product.py  test_domain_refresh_token.py  test_domain_user.py  test_health.py  test_image_upload_service.py  test_images_router.py  test_models_user.py  test_order_router.py  test_payment_router.py  test_product_repository.py  test_product_service.py  test_products_router.py  test_refresh_token_repository.py  test_schemas_user.py  test_user_repository.py
docs/: PRD.md  (+1 more)
(+143 files in other folders)
